Add support for 6project.org / openvpn tunnel type
Change-type: minor

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '2.1'
 volumes:
   data:
 services:
-  radvd:
-    build: ./radvd
+  router:
+    build: ./router
     volumes:
       - 'data:/data'
     network_mode: host
